--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -49,6 +49,10 @@ table.table a {
   }
 }
 
+.table {
+  color: var(--global-text-color);
+}
+
 .table-dark {
   background-color: transparent;
   &.table-bordered {
